[gd_scene load_steps=6 format=3 uid="uid://dq2wj0rwhyo78"]

[ext_resource type="Script" path="res://Scenes/Main/AbstractDialogueStysem.gd" id="1_nyhah"]
[ext_resource type="Script" path="res://Code/Engine/TextLabel.gd" id="2_immwh"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_gcdlh"]
light_mode = 1

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_dy17v"]
light_mode = 1

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_brpv7"]
light_mode = 1

[node name="DialogueSystem" type="Control"]
material = SubResource("CanvasItemMaterial_gcdlh")
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nyhah")

[node name="Continue" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CharacterName" type="Label" parent="."]
material = SubResource("CanvasItemMaterial_dy17v")
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -181.0
offset_bottom = -123.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 30
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("2_immwh")

[node name="TextBox" type="Label" parent="."]
material = SubResource("CanvasItemMaterial_brpv7")
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -121.0
grow_horizontal = 2
grow_vertical = 0
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("2_immwh")

[connection signal="pressed" from="Continue" to="." method="proceed"]
